// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar correctamente el componente con el título personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle debe mostrar el compornente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug
  </span>
</div>
`;
